--- a/stock-wizard/package.json
+++ b/stock-wizard/package.json
@@ -14,9 +14,13 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs-adapter-luxon": "^1.3.1",
+    "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-zoom": "^2.2.0",
+    "distributions": "^2.2.0",
     "finnhub": "^1.2.19",
     "luxon": "^3.6.1",
+    "mathjs": "^14.5.3",
+    "probability-distributions": "^0.9.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
