--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,10 @@
 {
+  "type": "module",
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "simple-statistics": "^7.8.8",
     "yahoo-finance2": "^3.11.2"
   }
 }
